<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.jhu.hlt</groupId>
  <artifactId>fnparse</artifactId>
  <version>1.0.1</version>

  <dependencies>
    <dependency>
      <groupId>edu.jhu.hlt</groupId>
      <artifactId>concrete-core</artifactId>
      <version>3.9.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>edu.jhu.pacaya</groupId>
      <artifactId>pacaya</artifactId>
      <version>2.0.2-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>edu.mit</groupId>
      <artifactId>jwi</artifactId>
      <version>2.2.3</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4</version>
    </dependency>
    <dependency>
      <groupId>edu.jhu.hlt.concrete</groupId>
      <artifactId>concrete-stanford</artifactId>
      <version>3.10.0</version>
    </dependency>
    <dependency>
      <groupId>redis.clients</groupId>
      <artifactId>jedis</artifactId>
      <version>2.6.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id> <!-- this is used for inheritance merges -->
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <distributionManagement>
    <repository>
      <id>coe-mvn</id>
      <name>coe-mvn-releases</name>
      <url>http://10.162.95.20:8081/artifactory/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>coe-mvn</id>
      <name>coe-mvn-snapshots</name>
      <url>http://10.162.95.20:8081/artifactory/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>


</project>
<!-- vim: set ts=2 sw=2 expandtab : -->
